--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
 				<span class="neo__name">&copy; NeoFit</span>
 			</div>
 			<div class="dev">
-				<a href="http://elwalcode.pro/" target="_blank"><span>dev by </span>Valerii Elwa 2020</a>
+				<a href="https://www.instagram.com/valerii.frontend/" target="_blank"><span>dev by </span>Valerii.L. 2020</a>
 			</div>
 		</footer>
 	</body>
